...
                            Button(
                                onClick = {
                                    moveToPage(pagerState.currentPage + 1)
                                },
                                modifier = Modifier
                                    .weight(1f)
                                    .testTag("new-player-modal-next"),
                            ) {
                                Text("Suivant")
                            }
                        } else {
                            Button(
                                onClick = onFinished,
                                modifier = Modifier
                                    .weight(1f)
                                    .testTag("new-player-modal-finish"),
                            ) {
                                Text(finishButtonLabel)
                            }
                        }
                    }
                }
...
